--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -55,11 +55,15 @@
                           <hr>
                         </p>
                         <p><b>Private and Public gates differences?</b><br>
-                          <b>Private</b>:
-                          <ul><li>requires login via app to access both private and public accounts.</li><li>can only use the web interface provided by the app.</li><li>can download anywhere by long pressing thumbnails. Or press the Instagram <b>Bookmark</b> icon at full page. Or hit Instagram <b>Copy link</b> like seen at public accounts</li><li>can scrape both private or public accounts.</li></ul>
-                          <b>Public</b>:
-                          <ul><li>doesn't require a login via this app to access public or private accounts.</li><li>can use Instagram app, or browsers.</li><li>can only download via Instagram <b>Copy link</b> at public or private accounts</li><li>can not scrape.</b></li></ul>
-                          Due to the latest restrictions, you must supply your nothing-to-lose Instagram account credentials via <b>Settings > Private mode</b> in order to make it work for both public and private accounts. No need to be the same as the currently-in-use Instagram account, except for private accounts (at least both accounts should follow the same private accounts).
+                          <b>Private/ internal</b>:
+                          <ul><li>can only use the web interface provided by the app.</li><li>requires login via app to access both private and public accounts.</li><li>can download anywhere by long pressing thumbnails. Or press the Instagram <b>Bookmark</b> icon at full page. Or hit Instagram <b>Copy link</b> like seen at public accounts</li><li>can scrape both private or public accounts.</li></ul>
+                          <b>Public/ external</b>:
+                          <ul><li>can use Instagram app, or browsers.</li><li>doesn't require a login via this app to access public or private accounts.</li><li>can only download via Instagram <b>Copy link</b> at public or private accounts</li><li>can not scrape.</b></li></ul>
+                          Due to the latest restrictions, providing a dummy or nothing-to-lose Instagram account is required via <b>Settings > Private mode</b> in order to make it work for both public and private accounts. No need to be the same as the currently-in-use Instagram account, except for private accounts (or at least both accounts, if different, should follow the same private accounts).
+                          <hr>
+                        </p>
+                        <p><b>How to edit my created hashtags?</b><br>
+                          Click oor long press the item on its listing page.
                           <hr>
                         </p>
                         <p><b>How does downloading private account media work?</b><br>
@@ -81,7 +85,7 @@
                         </p>
                         <p><b>Is scraping safe for my account?</b><br>
                           No. Use at your own risk. It is forbidden. You had been warned before scraping, you will get banned. If not prepared, and not knowing how to play safe yourself, do not be tempted to scrape. Necessary measures had been provided to minimize
-                          the ban algorithm triggers such as to make it behave like human, reduces rate limits, persistent UA and cookies, etc. No guarantees whatsoever.
+                          the algorithm triggers such as to make it behave like human, reduces rate limits, persistent UA and cookies, etc. No guarantees whatsoever.
                           <hr>
                         </p>
                         <p><b>Can I navigate away while scraping?</b><br>
@@ -161,11 +165,11 @@
                           <hr>
                         </p>
                         <p><b>Does video watermark work?</b><br>
-                          No. I haven't spent more time to remove that option due to a mix of videos and images. Please ignore for videos.
+                          Not yet, sorry. I haven't been able to make it nor remove that option due to a mix of videos and images. Please ignore for videos for now. It should work for images, though.
                           <hr>
                         </p>
                         <p><b>How does the reward or point system work?</b><br>
-                          Only applicable to FREE version to minimize ads interruptions. Tap the top-right corner reward icon. Everytime you watch a video ad after a minimum 32 seconds threshold met, you will earn 10 points. If you close the video before the threshold 32 seconds, you will get 0. Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 or 300 items at once, and you can only start downloading once you have 10 points, not 100, as long as you meet 32 seconds threshold. If you can keep your points above 100, no ads (banner or fullscreen ones) will be shown. That is one of the obvious advantages of the rewards, or points system. Shortly, when you have free time to be interrupted, be sure to keep earning points so that when you don't want interruptions, you are totally free of them.
+                          Only applicable to FREE version to minimize ads interruptions. Tap the top-right corner reward icon, or keep watching when presented by the app features. Everytime you watch a video ad after a minimum 32 seconds threshold met, you will earn 10 points. If you close the video before the threshold 32 seconds, you will get the point, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be executed. <br><br>Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 or 300 items at once, and you can only start downloading once you have 10 points, not necessarily 150, as long as you meet the 32 seconds threshold. If you can keep your points 150 (400+ is good), no ads (banner or fullscreen ones) will be shown. That is one of the obvious advantages of the rewards, or points system. Shortly, when you have free time to be interrupted, be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download 300 items per day, consider keeping your points 150 (minimum) + 300 = 450 to get ads-free interruptions. If you are sick of points, consider a PRO version.
                           <hr>
                         </p>
                         <p><b>What are differences between FREE and PRO versions?</b><br>
