--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -49,8 +49,8 @@
                     <header><span property="schema:name" content="Privacy Policy" class="rdf-meta hidden"></span></header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
-                        <p>Gaus Surahman built the DrupalPocket, Quotable, VIP Downloader for Instagram Photo Video, and other apps created by me (from here on specified as <strong>my apps</strong>) and made them available as free and commercial
-                          apps. This SERVICE is provided by Gaus Surahman and is intended for use as is.</p>
+                        <p>Gaus Surahman built the DruPocket, Quotable, VIP Downloader for Instagram Photo Video, and other apps, created by me (from here on specified as <strong>my apps</strong>) and made them available as free and commercial
+                          apps. This SERVICE is provided by me and is intended for use as is.</p>
                         <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
                         <p>If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or
                           share your information with anyone except as described in this Privacy Policy.</p>
