--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -164,17 +164,25 @@
                           Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum 32 seconds threshold and 10 points is required before you close it. If you close it too early, scraping is not triggered.
                           <hr>
                         </p>
+                        <p><b>How to remove the notification?</b><br>
+                          <b>Settings > Private mode > Kill the service</b>. The notification needs to stand by to listen for "COPY LINKS" if using non-private mode. You can kill it if you always goes Private mode.
+                          <hr>
+                        </p>
                         <p><b>Does video watermark work?</b><br>
                           Not yet, sorry. I haven't been able to make it nor remove that option due to a mix of videos and images. Please ignore for videos for now. It should work for images, though.
                           <hr>
                         </p>
                         <p><b>How does the reward or point system work?</b><br>
-                          Only applicable to FREE version to minimize ads interruptions. Tap the top-right corner reward icon, or keep watching when presented by the app features. Everytime you watch a video ad after a minimum 32 seconds threshold met, you will earn 10 points. If you close the video before the threshold 32 seconds, you will get the point, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be executed. <br><br>Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 or 300 items at once, and you can only start downloading once you have 10 points, not necessarily 150, as long as you meet the 32 seconds threshold. If you can keep your points 150 (400+ is good), no ads (banner or fullscreen ones) will be shown. That is one of the obvious advantages of the rewards, or points system. Shortly, when you have free time to be interrupted, be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download 300 items per day, consider keeping your points 150 (minimum) + 300 = 450 to get ads-free interruptions. If you are sick of points, consider a PRO version.
+                          Only applicable to FREE version to minimize ads interruptions. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after a minimum 32 seconds threshold met, you will earn 10 points. If you close the video before the threshold 32 seconds, you will get the point, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be executed. <br><br>Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 or 300 items at once, and you can only start downloading once you have 10 points, not necessarily 150, as long as you meet the 32 seconds threshold. <br><br>If you can keep your points 150 (400+ is good), no ads (banner or fullscreen ones) will be shown. <br><br>That is one of the obvious advantages of the rewards, or points system. <br><br>Shortly, when you have free time to be interrupted, be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download 300 items per day, consider keeping your points 150 (minimum) + 300 = 450 to get ads-free interruptions. <br><br>If you are sick of points, consider a PRO version.
+                          <hr>
+                        </p>
+                        <p><b>I downloaded one post, but my points deducted by 10?</b><br>
+                          At one post, it may contain 10 media such as seen at carousel post. The download is per media item, not post.
                           <hr>
                         </p>
                         <p><b>What are differences between FREE and PRO versions?</b><br>
                          Aside from ads, below are a few differences:
-                          <ol><li><b>FREE:</b> Browser will be killed if you put the app into background/ overview. <br><b>PRO:</b> Browser persists as long as the app is open, not destroyed.</li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video and earning a minimum 10 points. <br><b>PRO:</b> Scraper starts immediately.</li></ol>
+                          <ol><li><b>FREE:</b> Browser will be killed if you put the app into background/ overview. If the browser is scraping, it will be terminated. <br><b>PRO:</b> Browser persists as long as the app is open, not destroyed. </li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video and earning a minimum 10 points. If the video is closed before 32 second, no spider will run. <br><b>PRO:</b> Scraper starts immediately.</li></ol>
                           <hr>
                         </p>
                         <p><b>Have questions, suggestions, bug reports, or feedback?</b><br>
