--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -180,9 +180,9 @@
                           At one post, it may contain 10 media such as seen at carousel post. The download is per media item, not post.
                           <hr>
                         </p>
-                        <p><b>What are differences between FREE and PRO versions?</b><br>
+                        <p><b>FREE vs. PRO versions?</b><br>
                          Aside from ads, below are a few differences:
-                          <ol><li><b>FREE:</b> Browser will be killed if you put the app into background/ overview. If the browser is scraping, it will be terminated. <br><b>PRO:</b> Browser persists as long as the app is open, not destroyed. </li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video and earning a minimum 10 points. If the video is closed before 32 second, no spider will run. <br><b>PRO:</b> Scraper starts immediately.</li></ol>
+                          <ol><li><b>FREE:</b> Has reward or point system in return for app features. <br><b>PRO:</b> No hustle, no reward system.</li><li><b>FREE:</b> Browser will be killed if you put the app into background/ overview. If the browser is scraping, it will be terminated. <br><b>PRO:</b> Browser persists as long as the app is open, not destroyed. </li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video and earning a minimum 10 points. If the video is closed before 32 seconds, no scraping spider will run. <br><b>PRO:</b> Scraper starts immediately.</li></ol>
                           <hr>
                         </p>
                         <p><b>Have questions, suggestions, bug reports, or feedback?</b><br>
