--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -63,11 +63,11 @@
                           <hr>
                         </p>
                         <p><b>How to edit my created hashtags?</b><br>
-                          Click oor long press the item on its listing page.
+                          Click or long press the item on its listing page.
                           <hr>
                         </p>
                         <p><b>How does downloading private account media work?</b><br>
-                          <b>Three ways:</b><br> <ol><li>Long press a media (such as at /explore, /tags, /search or profile pages, any page which list small thumbnails) to save. The app will download it when you signal a long press.</li><li>Visit its full page, and hit or press the Instagram <b>Bookmark</b> icon at full page.</li><li>Use Instagram app, and hit regular <b>Copy link</b> for both public and private accounts.</li></ol>
+                          <b>Three ways:</b><br> <ol><li>Long press a media thumbnail (such as seen at /explore, /tags, /search or profile pages, any page which list small thumbnails) to save. The app will download it when you signal a long press.</li><li>Visit its full page, and hit or press the Instagram <b>Bookmark</b> icon at full page.</li><li>Use Instagram app, and hit regular <b>Copy link</b> for both public and private accounts.</li></ol>
                           For the first two, login via app web interface is required so that the app can see what you see without any special authorization. The app does not care about your credentials. It just borrows your authorized eyes under the hood due to Instagram restrictions.
                           <hr>
                         </p>
@@ -78,27 +78,26 @@
                           <hr>
                         </p>
                         <p><b>Instagram scraping requirements?</b><br>
-                        <ul><li>Currently only works for profile pages with small thumbnails, not those with large images. Although scraping /tags, or /explore pages is doable, we'll postpone this feature till enough requests.</li><li>Strong internet
-                          connection.</li><li>Large size of device external storage (30gb+ to play safe), else you will be locked down due to out of space exception. Do not panic, though. Just kill the app, or power-off the device at worst. Manage your space, move or delete files.
+                        <ul><li>Currently only works for profile pages with small thumbnails, not those with large images. Although scraping /tags, /explore, or practically any pages is doable, this feature is postponed till enough requests.</li><li>Strong internet
+                          connection.</li><li>Large size of device external storage (30gb+ to play nice), else you will be locked down due to out of space exception. Do not panic, though. Just kill the app, or power-off the device at worst. Manage your space, move or delete files.
                           Switch or plug in a new empty card. Be sure to select it via <b>Organize directories</b>.</li></ul>
                           <hr>
                         </p>
                         <p><b>Is scraping safe for my account?</b><br>
-                          No. Use at your own risk. It is forbidden. You had been warned before scraping, you will get banned. If not prepared, and not knowing how to play safe yourself, do not be tempted to scrape. Necessary measures had been provided to minimize
-                          the algorithm triggers such as to make it behave like human, reduces rate limits, persistent UA and cookies, etc. No guarantees whatsoever.
+                          No. Use at your own risk. Use a dummy account. It is not allowed. You had been warned before scraping, you will get banned. If not prepared, and not knowing how to play nice, do not scrape. Please do not scrape for evil purposes. Use it for the highest good. Necessary measures had been provided to minimize the algorithm triggers such as to make it behave like human with some configurable intervals, reduces rate limits, persistent UA and cookies, etc. No guarantees whatsoever.
                           <hr>
                         </p>
                         <p><b>Can I navigate away while scraping?</b><br>
                           Yes, as long as the app web interface displaying Instagram is opened. Scraping is conducted at another thread. Not your main UI thread. But that means you are doing several things simultaneously which immediately smell like human bot behaviors. Staying tuned till all downloads are finished is recommended unless you provide different accounts via <b>Settings > Private mode</b>.
                           <hr>
                         </p>
-                        <p><b>What does <i>play safe</i> mean?</b><br>
+                        <p><b>What does <i>play nice</i> mean?</b><br>
                           Scraping is bot behaviors, not human. Bots are banned, mostly.
-                          <b>Play safe:</b>
+                          <b>Play nice:</b>
                           <ul>
                             <li>Behave like human, click, open, close, back, scroll up and down. Do not repeat the same task too much, including donwload, or even like, too much. Don't do anything just too much. Anything preceded by too is not good, including too good.</li>
                             <li>Stop downloading anything when reaching 300 per 24 hour. Unless you are caught earlier. You will be prompted a number when scraping, make a note.</li>
-                            <li>Only scrap 100 at most at a time. You can rescan and rescrap the rest tomorrow.</li>
+                            <li>Only scrap 100 at most at a time. You can rescan and rescrape the rest tomorrow.</li>
                             <li>Have backup accounts, many.</li>
                             <li>Anything against the above is not safe at all. You had been warned. Do trials and errors at your own descretion.</li>
                           </ul>
@@ -135,7 +134,7 @@
                           <hr>
                         </p>
                         <p><b>How to repost videos or pictures?</b><br>
-                          Tap any thumbnail to open the gallery display. Find a button with a plus (+) sign, and tap <b>Regram/ repost</b> button. Be sure to give credit to owners, and seek for their permissions. Or provide watermark as a credit in the least.
+                          Tap any thumbnail to open the gallery display, or hit <b>Images</b> or <b>Videos</b> medu on the drawer. Find a button with a Repost sign (like seen at Twitter with Retweet), and tap that <b>Regram/ repost</b> button. Be sure to give credit to owners, and seek for their permissions. Or provide the configurable watermark as a credit in the least.
                           <hr>
                         </p>
                         <p><b>Nothing downloaded?</b><br>
@@ -159,7 +158,6 @@
                           Images are firstly loaded as small thumbnails to avoid OutOfMemory issue. Once you focus on a gallery image, a larger image version replaces the thumbnail.
                           <hr>
                         </p>
-                       
                         <p><b>Why scraping not work?</b><br>
                           Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum 32 seconds threshold and 10 points is required before you close it. If you close it too early, scraping is not triggered.
                           <hr>
