--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -66,6 +66,10 @@
                           Click or long press the item on its listing page.
                           <hr>
                         </p>
+                        <p><b>I copied hashtags and captions, now what?</b><br>
+                          Hit <b>Repost</b> button. At Instagram, when prompted to add caption, simply long press on the textarea, and press <b>Paste</b> prompt.
+                          <hr>
+                        </p>
                         <p><b>How does downloading private account media work?</b><br>
                           <b>Three ways:</b><br> <ol><li>Long press a media thumbnail (such as seen at /explore, /tags, /search or profile pages, any page which list small thumbnails) to save. The app will download it when you signal a long press.</li><li>Visit its full page, and hit or press the Instagram <b>Bookmark</b> icon at full page.</li><li>Use Instagram app, and hit regular <b>Copy link</b> for both public and private accounts.</li></ol>
                           For the first two, login via app web interface is required so that the app can see what you see without any special authorization. The app does not care about your credentials. It just borrows your authorized eyes under the hood due to Instagram restrictions.
@@ -83,23 +87,23 @@
                           Switch or plug in a new empty card. Be sure to select it via <b>Organize directories</b>.</li></ul>
                           <hr>
                         </p>
-                        <p><b>Is scraping safe for my account?</b><br>
-                          No. Use at your own risk. Use a dummy account. It is not allowed. You had been warned before scraping, you will get banned. If not prepared, and not knowing how to play nice, do not scrape. Please do not scrape for evil purposes. Use it for the highest good. Necessary measures had been provided to minimize the algorithm triggers such as to make it behave like human with some configurable intervals, reduces rate limits, persistent UA and cookies, etc. No guarantees whatsoever.
-                          <hr>
-                        </p>
                         <p><b>Can I navigate away while scraping?</b><br>
-                          Yes, as long as the app web interface displaying Instagram is opened. Scraping is conducted at another thread. Not your main UI thread. But that means you are doing several things simultaneously which immediately smell like human bot behaviors. Staying tuned till all downloads are finished is recommended unless you provide different accounts via <b>Settings > Private mode</b>.
+                          Yes, as long as the app web interface displaying Instagram is opened. Scraping is run at another thread. Not your main UI thread. But that means you are doing several things simultaneously which immediately smells like human bot behaviors. Staying tuned till all downloads are finished is recommended unless you provide different accounts via <b>Settings > Private mode</b>.
                           <hr>
                         </p>
-                        <p><b>What does <i>play nice</i> mean?</b><br>
-                          Scraping is bot behaviors, not human. Bots are banned, mostly.
-                          <b>Play nice:</b>
+                        <p><b>Is scraping safe for my account?</b><br>
+                          No. Use at your own risk. Use a dummy account. It is not allowed. You had been warned before scraping. If not prepared, and not knowing how to play nice, do not scrape. Necessary measures had been provided to minimize the algorithm triggers such as to make it behave like human with some configurable intervals, reduces rate limits, persistent UA and cookies, etc. No guarantees whatsoever.
+                          <hr>
+                        </p>
+                        <p><b>Any recommendations?</b><br>
+                          No recommendations. Unfortunately scraping is bot behaviors, hardly human. Bots are b.a.n.n.e.d, mostly. Just know what you are doing. Common sense applies:
                           <ul>
-                            <li>Behave like human, click, open, close, back, scroll up and down. Do not repeat the same task too much, including donwload, or even like, too much. Don't do anything just too much. Anything preceded by too is not good, including too good.</li>
+                            <li>Normal human actions: click, open, close, back, scroll up and down. Do not repeat the same task too much, including donwload, or even like, too much. Don't do anything just too much. Anything preceded by too is not good, including too good.</li>
                             <li>Stop downloading anything when reaching 300 per 24 hour. Unless you are caught earlier. You will be prompted a number when scraping, make a note.</li>
-                            <li>Only scrap 100 at most at a time. You can rescan and rescrape the rest tomorrow.</li>
-                            <li>Have backup accounts, many.</li>
-                            <li>Anything against the above is not safe at all. You had been warned. Do trials and errors at your own descretion.</li>
+                            <li>Only download 100 at most at a time. You can rescan the rest tomorrow.</li>
+                            <li>Have backup dummy accounts, many.</li>
+                            <li>Use different dummy accounts, follow the same private one. Input the first at <b>Settings > Private mode</b>. The other at Instagram.</li>
+                            <li>Use the same dummy accounts, and do trials and errors at your own descretion.</li>
                           </ul>
                           <hr>
                         </p>
@@ -171,7 +175,7 @@
                           <hr>
                         </p>
                         <p><b>How does the reward or point system work?</b><br>
-                          Only applicable to FREE version to minimize ads interruptions. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after a minimum 32 seconds threshold met, you will earn 10 points. If you close the video before the threshold 32 seconds, you will get the point, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be executed. <br><br>Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 or 300 items at once, and you can only start downloading once you have 10 points, not necessarily 150, as long as you meet the 32 seconds threshold. <br><br>If you can keep your points 150 (400+ is good), no ads (banner or fullscreen ones) will be shown. <br><br>That is one of the obvious advantages of the rewards, or points system. <br><br>Shortly, when you have free time to be interrupted, be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download 300 items per day, consider keeping your points 150 (minimum) + 300 = 450 to get ads-free interruptions. <br><br>If you are sick of points, consider a PRO version.
+                          Only applicable to FREE version to minimize ads interruptions. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after a minimum 32 seconds threshold met, you will earn 10 points. If you close it before the threshold 32 seconds, you will still get the bonus point 2, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be executed. <br><br>1 download = 1 point at regular one-at-a-time download. 100+ scrapes = 30 points. Scraping is different, it can download 100 or 300 items at once, and you can only start downloading once you have the minimum point for scraping, 30 points, not necessarily 150, as long as you meet the 32 seconds threshold. <br><br>Starting from 3000, no ads (banner or fullscreen ones) will be shown. <br><br>Those are the obvious advantages of the reward, or point system. <br><br>Shortly, when you have free time to be interrupted, be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download 300 items per day, consider keeping your points above the minimum to get ads-free interruptions. <br><br>If you are sick of points, consider a PRO version.
                           <hr>
                         </p>
                         <p><b>I downloaded one post, but my points deducted by 10?</b><br>
