--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -184,7 +184,22 @@
                         </p>
                         <p><b>FREE vs. PRO versions?</b><br>
                          Aside from ads, below are a few differences:
-                          <ol><li><b>FREE:</b> Has reward or point system in return for app features. <br><b>PRO:</b> No hustle, no reward system.</li><li><b>FREE:</b> Browser will be killed if you put the app into background/ overview. If the browser is scraping, it will be terminated. <br><b>PRO:</b> Browser persists as long as the app is open, not destroyed. </li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video the above-mentioned minimum points. If the video is closed before 32 seconds, no scraping spider will run. <br><b>PRO:</b> Scraper starts immediately.</li></ol>
+                          <br><b>FREE:</b> 
+                          <ol>
+                            <li>Has reward or point system in return for app features.</li>
+                            <li>Browser will be killed if the app is put into background/ overview. If scraping, it will be terminated.</li>
+                            <li>Scraper will start at 32 seconds threshold after watching video with the above-mentioned minimum points. If the video is closed before 32 seconds, no scraping spider will run.</li>
+                            <li>No watermark option is not saved.</li>
+                            <li>My watermark requires PRO.</li>
+                          </ol>
+                          <br><b>PRO:</b> 
+                          <ol>
+                            <li>No hustle, no reward system.</li>
+                            <li>Browser persists as long as the app is open, not destroyed.</li>
+                            <li>Scraper starts immediately.</li>
+                            <li>No watermark option is saved.</li>
+                            <li>My watermark replaces credits with yours.</li>
+                          </ol>
                           <hr>
                         </p>
                         <p><b>Have questions, suggestions, bug reports, or feedback?</b><br>
