--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -55,9 +55,14 @@
                         <details>
                           <summary>Where are the pictures and videos stored?</summary>
                           <div>
-                            At your SD (secondary or external) card (<b>Internal storage > Pictures|Movies > VIP Downloader</b> or <b>SD card/Removable storage > VIP Downloader > Pictures|Movies</b>). Or your folder of choice at a removable storage
-                            if
-                            you have one. Be sure to enable the requested permissions. If not, useless.
+                            At your SD (secondary or external) card:
+                            <ul>
+                              <li><b>Internal storage > Pictures|Movies > VIP Downloader</b></li>
+                              <li><b>SD card/Removable storage > VIP Downloader > Pictures|Movies</b>)</li>
+                              <li>Or your folder of choice at a removable storage if you have one.</li>
+                            </ul>
+
+                              This way the data is more managable at larger storage. You can always change locations to organize better, no problems. Be sure to enable the requested permissions. If not, useless.
 
                           </div>
                           </summary>
@@ -253,9 +258,8 @@
                         <details>
                           <summary>Nothing downloaded?</summary>
                           <div>
-                            Wait for a few seconds. In order for auto download to work, be sure that <b>VIP Downloader</b> is already open before tapping <b>Copy link</b> on Instagram. You can tap <b>VIP Downloader</b> icon when prompted to verify
-                            the
-                            download process. Or ignore it to continue browsing. The icon will disappear after a few seconds. Yet images or pictures should be downloaded automatically as long as this app is not killed. If failed for a reason, you can
+                            Wait for a few seconds. In order for auto download to work, be sure that <b>VIP Downloader</b> is already open before downloading anything on Instagram. You can tap <b>VIP Downloader</b> icon when prompted to verify
+                            the download process. Or ignore it to continue browsing. The icon will disappear after a few seconds. Yet images or videos should be downloaded automatically as long as this app is not killed. <br><br>If failed for a reason, you can
                             always manually paste the clipboard link into the provided text input. Lastly, also check if the image or video is already downloaded. Be sure to bookmark or fave them at Instagram to avoid unnecessary confusion with
                             downloads.
 
@@ -324,10 +328,16 @@
                         <details>
                           <summary>How does the reward or point system work?</summary>
                           <div>
-                            Only applicable to FREE version to minimize ads interruptions. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after a minimum 32 seconds
+                            Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after a minimum 32 seconds
                             threshold met, you will earn 10 points. If you close it before the threshold 32 seconds, you will still get the bonus point 2, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be
-                            executed. <br><br>1 download = 1 point at regular one-at-a-time download. <br><br>Scraping requires 30 points. Scraping can download 100 or 300 items at once if you have the minimum point and meet the 32 seconds threshold.
-                            <br><br>Ads-free requires 3000points. No ads (banner or fullscreen ones) will be shown. <br><br>Those are the obvious advantages of the reward, or point system. <br><br>Shortly, when you have free time to be interrupted,
+                            executed.
+                            <ul>
+                              <li>1 download = 1 point at regular one-at-a-time download.</li>
+                              <li>Scraping requires 30 points. Scraping can download 100 or 300 items at once if you have the minimum point and meet the 32 seconds threshold.</li>
+                              <li>Ads-free requires 3000 points. No ads (banner or fullscreen ones) will be shown.</li>
+                            </ul>
+
+                            Those are the obvious advantages of the reward, or point system. <br><br>Shortly, when you have free time to be interrupted,
                             be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download 300 items per day, consider keeping your points above the minimum to get ads-free
                             interruptions. <br><br>If you are sick of points, consider a PRO version.
 
