--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -16,7 +16,7 @@
   <link rel="revision" href="/project/vipinstagram/faq" />
   <title>FAQ | gaus</title>
   <style>
-    html,body,.root{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary::-webkit-details-marker{display:none}details summary{width:100%;padding:.75rem 0;border-top:1px solid #000;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary:after{content:"+";color:#000;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary:after{transform:rotate(45deg);}details summary{outline:0}details > div, details > p, details > ul, details > ol{font-size:.96rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
+    html,body,.root{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary::-webkit-details-marker{display:none}details summary{width:100%;padding:.75rem 0;border-top:1px solid #000;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary:after{content:"+";color:#000;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary:after{transform:rotate(45deg);}details summary{outline:0}details > div, details > p, details > ul, details > ol{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
   </style>
 </head>
 
@@ -91,22 +91,6 @@
                           </summary>
                         </details>
                         <details>
-                          <summary>How to edit my created hashtags?</summary>
-                          <div>
-                            Click or long press the item on its listing page.
-
-                          </div>
-                          </summary>
-                        </details>
-                        <details>
-                          <summary>I copied hashtags and captions, now what?</summary>
-                          <div>
-                            Hit <b>Repost</b> button. At Instagram, when prompted to add caption, simply long press on the textarea, and press <b>Paste</b> prompt.
-
-                          </div>
-                          </summary>
-                        </details>
-                        <details>
                           <summary>How does downloading private account media work?</summary>
                           <div>
                             <b>Three ways:</b>
@@ -121,6 +105,7 @@
                           </div>
                           </summary>
                         </details>
+
                         <details>
                           <summary>How does Instagram scraping work?</summary>
                           <div>
@@ -170,7 +155,7 @@
                           </summary>
                         </details>
                         <details>
-                          <summary>Any recommendations?</summary>
+                          <summary>Any scrape recommendations?</summary>
                           <div>
                             No recommendations. Unfortunately scraping is bot behaviors, hardly human. Bots are b.a.n.n.e.d, mostly. Just know what you are doing. Common sense applies:
                             <ul>
@@ -182,6 +167,14 @@
                               <li>Use different dummy accounts, follow the same private one. Input the first at <b>Settings > Private mode</b>. The other at Instagram.</li>
                               <li>Use the same dummy accounts, and do trials and errors at your own descretion.</li>
                             </ul>
+                          </div>
+                          </summary>
+                        </details>
+                        <details>
+                          <summary>Why scraping not work?</summary>
+                          <div>
+                            Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum 32 seconds threshold and 30 points is required before you close it. If you close it too early, scraping is not triggered.
+
                           </div>
                           </summary>
                         </details>
@@ -267,6 +260,22 @@
                           </summary>
                         </details>
                         <details>
+                          <summary>How to edit my created hashtags?</summary>
+                          <div>
+                            Click or long press the item on its listing page.
+
+                          </div>
+                          </summary>
+                        </details>
+                        <details>
+                          <summary>I copied hashtags and captions, now what?</summary>
+                          <div>
+                            Hit <b>Repost</b> button. At Instagram, when prompted to add caption, simply long press on the textarea, and press <b>Paste</b> prompt.
+
+                          </div>
+                          </summary>
+                        </details>
+                        <details>
                           <summary>Can I set a video cover as a wallpaper, too?</summary>
                           <div>
                             Yes, just hit <b>Set wallpaper</b> button at video gallery. In order to have full screen video cover, enable <b>Create video cover</b> at <b>Settings > Personalization</b>. It is disabled to avoid unwanted covers. Only
@@ -293,14 +302,7 @@
                           </div>
                           </summary>
                         </details>
-                        <details>
-                          <summary>Why scraping not work?</summary>
-                          <div>
-                            Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum 32 seconds threshold and 10 points is required before you close it. If you close it too early, scraping is not triggered.
 
-                          </div>
-                          </summary>
-                        </details>
                         <details>
                           <summary>How to remove the notification?</summary>
                           <div>
